tests/baselines/reference/emitClassDeclarationWithGetterSetterInES6.errors.txt
tests/cases/conformance/es6/classDeclaration/emitClassDeclarationWithGetterSetterInES6.ts(12,9): error TS2300: Duplicate identifier '["computedname"]'.
tests/cases/conformance/es6/classDeclaration/emitClassDeclarationWithGetterSetterInES6.ts(15,9): error TS2300: Duplicate identifier '["computedname"]'.
tests/cases/conformance/es6/classDeclaration/emitClassDeclarationWithGetterSetterInES6.ts(19,9): error TS2300: Duplicate identifier '["computedname"]'.
tests/cases/conformance/es6/classDeclaration/emitClassDeclarationWithGetterSetterInES6.ts(21,9): error TS2300: Duplicate identifier '["computedname"]'.


==== tests/cases/conformance/es6/classDeclaration/emitClassDeclarationWithGetterSetterInES6.ts (4 errors) ====
    class C {
        _name: string;
        get name(): string {
            return this._name;
        }
        static get name2(): string {
            return "BYE";
        }
        static get ["computedname"]() {
            return "";
        }
        get ["computedname"]() {
            ~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '["computedname"]'.
            return "";
        }
        get ["computedname"]() {
            ~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '["computedname"]'.
            return "";
        }
    
        set ["computedname"](x: any) {
            ~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '["computedname"]'.
        }
        set ["computedname"](y: string) {
            ~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '["computedname"]'.
        }
    
        set foo(a: string) { }
        static set bar(b: number) { }
        static set ["computedname"](b: string) { }
    }